
4.1.2 - ie refresh in progress

* fixed up namefix-cli.pl - works with updated libs. bugs may still occur

* all libraries updated to proper library format
  need to untangle global_variables.pm still.
  namefix-cli.pl is likely broken currently. been focusing on gui tidyup mainly.

* bookmarks.pm no longer uses self generating code.
  hacked some checkbutton to make it work

* mass libraries updated to proper libs

4.1.1 - ie refresh in progress

* about.pm is a proper lib now

* .msi & .exe's updated

* nsis installer script updated so it doesnt include .git

* Hot Keys Added:
  ESC = Stop doing whatever your doing
  F2  = Manual Rename
  F5  = Refresh current dir listing
  F6  = Preview current changes (if any)

* progress bar updates on recurisve listings

* make_test_dir.pl updated - creates fake music files in fake album directories
* added cool progress bar.
* code cleanups

* updating NSIS - probally quite broken on stuff like:
  ENV path,
  registry entry to ad namefix.pl to right click.

* adding right click Apply Preview to hlist
* update about dialog to refer to github: https://github.com/jacob-jarick/namefix
* created make_test_dir.pl for generating files I can test with.
* removed all references to $prog_dir, now using Findbin
* turned on strict and warnings for namefix.pl - redirected warnings for Jcombox
  created all missing main vars with our (not my), should have turned on strict ages ago.
  turning on strict has likely broken things, but gui fires up.

4.0.2

2:10 PM 18/04/2010
* updated NSIS installer for windows.
* Explorer intergration back for windows users (is not removed by uninstall option currently).

2:46 PM 30/01/2010
* file properties now works in gui
* more code for delete button, it now works and will display a confirmation dialog - please be careful.

1:25 PM 23/12/2009
* Fixed nf_print displaying dir icon for blank message lines in the gui's hlist.
* added delete and properties to gui right click menu (stubs only atm)
